IaC/xpipe-dev/xpipe-analytics/clickhouse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xpipe-analytics-clickhouse
  name: xpipe-analytics-clickhouse
  namespace: xpipe-dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xpipe-analytics-clickhouse
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xpipe-analytics-clickhouse
    spec:
      containers:
      - env:
        - name: CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT
          valueFrom:
            configMapKeyRef:
              key: CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT
              name: xpipe-analytics-clickhouse-config
        - name: CLICKHOUSE_DB
          valueFrom:
            secretKeyRef:
              key: CLICKHOUSE_DB
              name: xpipe-analytics-clickhouse-secret
        - name: CLICKHOUSE_USER
          valueFrom:
            secretKeyRef:
              key: CLICKHOUSE_USER
              name: xpipe-analytics-clickhouse-secret
        - name: CLICKHOUSE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: CLICKHOUSE_PASSWORD
              name: xpipe-analytics-clickhouse-secret
        image: clickhouse/clickhouse-server:24.3.3.102-alpine
        imagePullPolicy: IfNotPresent
        #livenessProbe:
        #  exec:
        #    command:
        #    - /bin/sh
        #    - -i
        #    - -c
        #    - mysqladmin -uroot ping
        #  failureThreshold: 3
        #  initialDelaySeconds: 30
        #  periodSeconds: 10
        #  successThreshold: 1
        #  timeoutSeconds: 1
        name: xpipe-analytics-clickhouse
        ports:
        - containerPort: 8123
          protocol: TCP
        - containerPort: 9000
          protocol: TCP
        - containerPort: 9440
          protocol: TCP
        #readinessProbe:
        #  exec:
        #    command:
        #    - /bin/sh
        #    - -ec
        #    - set -ex
        #    - mysql -uroot -e 'SELECT 1'
        #  failureThreshold: 3
        #  initialDelaySeconds: 5
        #  periodSeconds: 10
        #  successThreshold: 1
        #  timeoutSeconds: 1
        resources:
          limits:
            memory: 4096Mi
          requests:
            memory: 4096Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/clickhouse
          name: xpipe-analytics-clickhouse-volume
        - mountPath: /etc/clickhouse-server/config.d/ipv4-only.xml
          name: xpipe-analytics-clickhouse-ipv4-config-volume
          subPath: ipv4-only.xml
        - mountPath: /etc/clickhouse-server/config.d/logs.xml
          name: xpipe-analytics-clickhouse-logs-config-volume
          subPath: logs.xml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: xpipe-analytics-clickhouse-volume
        persistentVolumeClaim:
          claimName: xpipe-analytics-clickhouse-pvc
      - name: xpipe-analytics-clickhouse-ipv4-config-volume
        configMap:
          name: xpipe-analytics-clickhouse-ipv4-config
      - name: xpipe-analytics-clickhouse-logs-config-volume
        configMap:
          name: xpipe-analytics-clickhouse-logs-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: xpipe-analytics-clickhouse
  name: xpipe-analytics-clickhouse
  namespace: xpipe-dev
spec:
  ports:
  - name: web
    port: 8123
    protocol: TCP
    targetPort: 8123
  - name: clickhouse
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: clickhouse-tls
    port: 9440
    protocol: TCP
    targetPort: 9440
  selector:
    app: xpipe-analytics-clickhouse
  sessionAffinity: None
  type: ClusterIP
